commit all changes
