# routes/suppliesRoute.js
@@ -5,4 +5,14 @@ const router = express.Router()
 
 router.get('/', suppliesController.retrieveAllSupplies);
 
+// POST route to create a new supply
+router.post('/', suppliesController.createSupplies);
+
+// PuT route to update a new supply
+router.put('/:id', suppliesController.updateSupplies);
+
+// DELETE route to delete a new supply
+router.delete('/:id', suppliesController.deleteSupplies);
+
+
 module.exports = router;
